Fix cake vertical cutoff bug and upgrade surprise UI to premium/romantic style

--- a/docs/birthday-cake/assets/cake.css
+++ b/docs/birthday-cake/assets/cake.css
@@ -3,6 +3,7 @@
 .cake {
   position: absolute;
   display: none;
+  top: 0;
   left: 50%;
   margin-left: -150px;
   width: 300px;
